force-app/main/default/objects/CompanyCode__c/CompanyCode__c.object-meta.xml
<CustomObject>
    <description>This datatable is used for all business lines, to allow aggregating each Customer (Account) to the corresponding OMV subsidiary</description>
    <label>Company Code</label>
    <nameField>
        <label>Company Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>