force-app/main/default/objects/CompanyCode__c/fields/CARDSRegion__c.field-meta.xml
<CustomField>
    <fullName>CARDSRegion__c</fullName>
    <label>CARDS Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CardsRegions</valueSetName>
    </valueSet>
</CustomField>