force-app/main/default/objects/CompanyCode__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Identification of OMV subsidiary city</description>
    <label>City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>