force-app/main/default/objects/CompanyCode__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Identification of OMV subsidiary country</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustomerCountry</valueSetName>
    </valueSet>
</CustomField>