force-app/main/default/objects/CompanyCode__c/fields/FPSRegion__c.field-meta.xml
<CustomField>
    <fullName>FPSRegion__c</fullName>
    <label>FPS Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FPSRegions</valueSetName>
    </valueSet>
</CustomField>