force-app/main/default/objects/CompanyCode__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Identification of default language for the OMV subsidiary customers</description>
    <label>Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustomerLanguage</valueSetName>
    </valueSet>
</CustomField>