force-app/main/default/objects/CompanyCode__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>Identification of OMV subsidiary Postal code</description>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>