force-app/main/default/objects/CompanyCode__c/fields/SAPCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>SAPCompanyCode__c</fullName>
    <description>Code in SAP that identifies the OMV subsidiary, e.g. 1A01</description>
    <label>SAP Company Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>