force-app/main/default/objects/CompanyCode__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Identification of OMV subsidiary street</description>
    <label>Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>